--- a/package.json
+++ b/package.json
@@ -3,28 +3,32 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
+    "dev": "npm run serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "deploy": "netlify deploy",
+    "release": "npm run deploy -- --prod",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "phonecode": "^1.0.0",
-    "register-service-worker": "^1.0.0",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
-    "vue-tel-input": "^2.0.2",
-    "vuex": "^3.0.1",
+    "register-service-worker": "^1.6.2",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vue-tel-input": "^4.1.0",
+    "vuex": "^3.1.2",
     "whatsapp-url": "^0.0.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0",
-    "@vue/cli-plugin-eslint": "^3.0.0",
-    "@vue/cli-plugin-pwa": "^3.0.0",
-    "@vue/cli-service": "^3.0.0",
-    "@vue/eslint-config-standard": "^3.0.0",
-    "stylus": "^0.54.5",
+    "@vue/cli-plugin-babel": "^4.1.1",
+    "@vue/cli-plugin-eslint": "^4.1.1",
+    "@vue/cli-plugin-pwa": "^4.1.1",
+    "@vue/cli-service": "^4.1.1",
+    "@vue/eslint-config-standard": "^5.0.1",
+    "netlify-cli": "^2.25.0",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
     "> 1%",
